[package]
name = "imagevariants"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Goodwin <jacob.goodwin@gmail.com>"]
description = "Basic CLI utility to create image variants for images in a directory."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
serde = { version = "^1.0.136", features = ["derive"] }
serde_json = "^1.0.59"
image = { version = "0.24.1", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld", "openexr"] }
base64 = "^0.13.0"
rayon = "1.5"
webp = "0.2.1"